--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -56,6 +56,7 @@ body {
 .btn-purple:hover {
   background-color: #5c35a0;
   border-color: #5c35a0;
+  color: white;
 }
 
 /* Admin Sidebar Styles */
@@ -138,7 +139,7 @@ body {
   border: none;
 }
 
-.form-control{
+.form-control, .form-select {
   padding: 12px 16px !important;
 }
 
@@ -169,19 +170,37 @@ body {
 }
 
 
-.content-wrap{
+.content-wrap {
   background-color: white;
   padding: 24px;
   border-radius: 16px;
   border: 1px solid var(--gray-500);
 }
 
-.content-wrap .title-wrap{
+.content-wrap .title-wrap {
   margin-bottom: 24px;
   padding-bottom: 16px;
   border-bottom: 1px solid var(--gray-500);
 }
 
-table tr td{
+table tr td {
   vertical-align: middle;
+}
+
+.menu-item {
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.menu-item:hover {
+  background-color: #f8f9fa;
+  color: #000;
+}
+
+.menu-item.active {
+  font-weight: 500;
+}
+
+.menu-item i {
+  width: 20px;
+  text-align: center;
 }
