--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11173,21 +11173,30 @@ p.sticky-label {
 .pagination .page-item .page-link {
     color: #000;
 }
-
+.img-cover{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 .content-wrap {
   max-width: 800px;
   margin: 0 auto;
 }
-.story-image {
-  width: 100%;
-  max-height: 400px;
-  object-fit: cover;
-  border-radius: 0.375rem;
-}
 .story-details .card {
   border: none;
+  margin-top: 100px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+.story-details .image-holder{
+  --size: 200px;
+  max-width: var(--size);
+  height: var(--size);
+  width: var(--size);
+  overflow: hidden;
+  border-radius: 50%;
+  margin: -100px auto 0;
+}
+
 .story-details .card-body {
   padding: 2rem;
 }
